finish work on mobile bug

--- a/static/styles.css
+++ b/static/styles.css
@@ -423,7 +423,7 @@ hr {
 }
 
 .demo-container {
-  height: 670px;
+  height: 85vh;
   padding: 20px;
   background-color: #e8ebef;
   border-radius: 5px;
